tests/paczka1/fuzzy1/43578952.err
Error in line 7: S38 A911 91,7
Error in line 11: lAHrTb A911 35,4
Error in line 9: zptkqbaSr S716 64,5
Error in line 20: A9K S716 31,8
